@@ -1,26 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST canto-curses-0.8.4.tar.gz 55302 SHA256 61b6c432d0d51247d2a03958c96e0822432ac0cebdee275f7d6fde98cdb99760 SHA512 8d29b1e58ff94656e942f2c60511468b8f3b5fd72656ebf6262d5023f8fa805306ee5c62b3e453ec9d86810a0b1d6acd1f0df92bb57ab3f617988bb067130d31 WHIRLPOOL c3eafa62df5444d722ee9f8ab397ccd58c198cb08adeba5074b7573025f26f5ad4abf90ac2fa8e1caa450e0425914ca1baf12fdad376d4cb0d522dd1cbd3755f
-EBUILD canto-curses-0.8.4.ebuild 567 SHA256 dcb8557d63c63b1cee985e7c99e36be35c2bdf7daa12a7094637673c00299a0b SHA512 ee2dfa57657535a3997e36bc74813bafde0fccb94c45f89d56895dae28f05f3211a2a08f0c0b3c66b78ae1d314603a0da91e21e261e581f7647d1124d844eb92 WHIRLPOOL a60584904c4cdcffaf7191819959cf52f82a5589f71e6fe156293bacdcd6ab367d909e94649bd55821786c729841f45921fc6426b240cbf4be2401e07d3463a2
-MISC ChangeLog 586 SHA256 c20b749460341375c83f386d8b122e1737ffc4db2fce4b5b5d06889b52893ee4 SHA512 058dd89f347532262f9576fc5dff13a1863aeec117695426763306ba22f719978634778be6f712fe36e173918fc76eee5187bed1481be14582e0a165573e517b WHIRLPOOL 599ad479c98c8cf1317f9e589d544daba1209b0baef41c7d82ebdb73d085c5452183a50f56309a707d611752edb0b25d69c2ce582465ee4d31ff90c8993b26c8
+DIST canto-curses-0.9.3.tar.gz 77748 SHA256 942828e96608a8af58cb3002ac1d50edd60697d87c3da5ce815278b27ed7707d SHA512 547061439e5d5a7f2bcb1643cc597578161f3c3c284520326fe483f79a60650e9b8b1c7cf5a5e1f165f13510e7cab893b77968b5995c66b572c0bb605b6ebaaa WHIRLPOOL 0836ff8cdd687cbf1b751507e95a409d268449ef5963340d7016362abcb31dd541bfe35c55587afeb38df2cf5b137cd57b74ef8177b5f6d50bab8e9189caef74
+EBUILD canto-curses-0.9.3.ebuild 760 SHA256 f410fd43144bafc9b9e972a4c62f1369a0a2b79901cb31154e0736e324bdf095 SHA512 d1bbb3c0750e5b0a581d179653d8507eda3fcba98aa4e567a74c714db92d3b5c9762ce29741c0bb79aa16c64ad59226f49c0ccb3d26b6a2ac0a844bd4f7e9d75 WHIRLPOOL 6997701a9b270c327f4ed46279eb0413e79bf8e865b04b7a5acd22d62d79ed1987a05dc5c49a8ba060ada93aeb2109fb0dfb44a4143876179b070ccfe4f28e98
+MISC ChangeLog 884 SHA256 93c40289890121b004b390f4a3395c675d183054a9fc47bcda11807e955a5ade SHA512 fa0234072e55266dd2c1252d9a1af419ee8faa69ce2cdf009b55a14565018e2a6a1e8a1e3eabdc6bbaf50f9bbddf2e57934326e7de2c2d8016fe97a86d8c7b0a WHIRLPOOL a57cfdd80501be8b53df784e7eab1efd8bba2b8a56100ce093633977f86ada1de4a15de67f64a819afd6d2d1b1b76611e959182e2893b6d29a02563d0fc79441
 MISC metadata.xml 319 SHA256 0146dd83b27171d9e305c35cbf0ff721ee1c1731fafa43f2667d4ed7d91bed64 SHA512 6f7c4887de940f46da0f94e75bd0a7f36c775d5193bf6b1d59a549237224c6dca9e9a92cdcae9d83e29baa30bb72bf2d608d9e7caf3fd668296737910413684d WHIRLPOOL 0485502b6fcb979f9e0e1112fb24cf476abffff212c71c89cc2c5fdd04be1d1a09a1890ea22254c344e42f94475620d6bcaae63602b2e775c094806b45aeecf4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVJXCrXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOKnoP/36arEynp3fO5ouzAuBiIh5j
-rh4ZhZZkHYL1BP59/btCrMHaLzRBhq84lhOYPOE2rI25t9jjplLkoHetfhYE4ZLG
-Y7dMeyM9aGZqPtdT8aWrWhn8nxtWCd94+zOkpaSnZ070xcNms95KR8mbISPinfKW
-MdParFpFGe4uR9mk1X9ZHSEc4ceLoAUEqTRMn4rm4IuBZIDNlNwdiQqZ3obCcs1N
-1Pg+m7rqVf7USujADNmNjBPr0E7uXYoqpQZOHbDUDK+rT1iBcWRG1O/C4D31jx4n
-Msg4TBJgcwwmvXINvjUniuzxTcBe9Sm8oKgeeHMYEZTkXiZiNLq9fFUWQQTeOXR/
-1DOqldbeC1qBGz7myTGC7lh5WU+vzcx3ElHUmK8DBEmz8ntgrkzK1cAKtSK1YeNx
-jdjhVqtROG5w9/VlQhTK7LS02pQ19vJd9euLMrISCVtn+xrL8Y7+j6QMUMisZdXA
-Q7B+NKjIYAWYfAPdgBzDxDjXYdOQuxcE02kf04u3jEGvVqwOpjJkD1YcnZzXPYx+
-DxL6/F1uQf7RtoUAJNugm8Vq0YU5L2gDBlQ035QkISOIsmdPdp2zqaRpZbgYzw9Q
-aeUuh9t88Cjt8H9kvfSLlJE7bSMDf/bEWeTUwP9RA3KQTzWgsOwpejBqcyQeeqDv
-GAualVyIQk2n1ut0rQHr
-=V/04
+iQEcBAEBCAAGBQJVQyKsAAoJECo/aRed9267un0H/jOo3TnaW69XaSPPB6+FAKOd
+rHw3rb/mbH2s/85h6MVD45c1nBa7/ECz2DWuCDhN06AxWkYBOtF4pibPfwIh31f1
+KH5zgLxMgs88h/azejfeurxTgzedac1cSx7G0GhKZGE0qVmlCXAXBZvKdSDibAHp
+esUlHURJqd7BVzrQQIoyNRwojzjGvu6zv4aM1LBmDIH6Sg+1pa/+jo5Gf1sHJNin
+6CKaNhuhUmuBoPV5eGGW2ralDWL3s5BkSdQiWMv3GYp6F1R4mI+rcsestvKA56Z5
+ua9QsburkPtEEqq16ge7xHc/UhnR48p5AAAv1JqTdX8N6zSK0VWOiHnaTPbCTNg=
+=HlRu
 -----END PGP SIGNATURE-----
