@@ -1,26 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST canto-daemon-0.8.2.tar.gz 39792 SHA256 e80da06acf574214fb239c7e50dbceb64fb52b689fc574a0c2b7be2dedd1fa19 SHA512 5f8772d06ff085437e37fbfbc09ede26dce9ed42947eca3033a54b349b49c482e5deeb6ed533c082e17dbd6c209248fe31121d54b8b01eb6edb921dda5776e35 WHIRLPOOL c5fd6b02027982aa4c81ba6b2f79b69c8d5cdd251fc7849bc8f0504e22b38d07c328691c944dd78f7dedfaf979f65445fe97d0207580d43201a705b80f04d97a
-EBUILD canto-daemon-0.8.2.ebuild 554 SHA256 c4cb44947f8ae783447bea2dd9ffdcd1794a071ca0fc80af64ea718d600d206f SHA512 447d290a2d4b3abb01518a11e3c5dc20aff6c195a05186aa2c1e55bb4f0cf38150b5b414fc1015c6a1b0d89ade6a4fe66558d12fe0c0bbffd63a99134e243206 WHIRLPOOL e7c0f61198d0fcb464f74c12c273338f8eb2997b302a7e9e567415f6ac610760c2aa7e49e3e54c8d3aaea98350ceb234d7356f08038f3063265f392bfbab77e6
-MISC ChangeLog 586 SHA256 34a411865e0a7fb0320a58db2407a16513293c580b69825aa480da0a33ebbf90 SHA512 36878d23e2ce9a0f66defab17a4db7a8cf370db422cd804edbadbd7d48afc283b22ca3459e2a55429e2ded56b33d61c1f3ed595cd4b628b4e4c4cfe429303291 WHIRLPOOL 63085aaf7e8fe2f186d45671ef0eef04296cb5e6c436f8d6b542e57e030ee9b4b943411c282f171fc42a9b9620cdd1413094a4a141ae3c6733ab1c4a12143247
+DIST canto-daemon-0.9.1.tar.gz 49316 SHA256 7eff52315a921d29944be4ba6fcadca1b4757ee940f567e44403e08029dbf333 SHA512 88e708c92813ddda44a8ea6a5d21722510822f22ebc0a4fb4165e6793ea50d89b139a51a4b1e06f811d7073c6b103590b52e4299c674f904e8b5aae7645484fd WHIRLPOOL 6646712a2e106c9a74cb37bde87653ad836cc075897a0f5707bcf2c78cbd348d5955527cc4bdff52813835ef69d5d4114ef334c8537ea477b7e0d8a4dfeb67b1
+EBUILD canto-daemon-0.9.1.ebuild 780 SHA256 aad360f413d941d0e19a04d30cf4f0b62f9ccb53cd1311d562a07cbb8d4104f4 SHA512 ed15c2b1cdb9afc947b519f1f9d61cf5c6156976ce6bd7d5c93a968c74c8e54010f8791f5ddb94013446fa867b75cc5defd4e4e9078e68ac74af2316d96f2c96 WHIRLPOOL b8378140da474c621cb76796a3c30f2a9a254198f53b393639ce27078920961bf49a0f238e6dd407c57487e67a4825206d44c4cbd27eda60a57362aea1623449
+MISC ChangeLog 884 SHA256 019d124935a74536e5b5984f6a3e879b68d03b315a639d5be0f6856e16d91699 SHA512 ba8bde5f7939868eae2ab16b1147c258c6e75050d5c457804fa1b53e87e28dad264b6080db7aad41d4468ae6c3b261f8bdb0dbeba83026d582417c2120888b31 WHIRLPOOL b9fe30776662656914d7ddbc0dc9ff9d75c7add134e2163c610fcd25d4580af847d51ac8f5d6e1c034c97f76087ed1a95f3470af35a2ea2906c99aa939ce9158
 MISC metadata.xml 317 SHA256 ff219abdf46ba187f95b29ff3aa0ef1e5e7f8c07ab68d03253f4deba61e66b3c SHA512 818f212b74dd9d134b3f950ad77a8a16a026f1b20a4538e7d850975841a4c23765262ab98ed28132c7360c4b8f22504db18fdbb9300af94b2c0d5c493aedd50d WHIRLPOOL 47b770a9bbb1f6e67d74e59653e3f3a60d54649a00c55e9ff45f03f62db11d33fc30144089b0e19fc6c8ce0da5ebb19ad900a92baf6371fe652612e7e90c5b89
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVJXCrXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOG0cQANJUsMw0IRAbdBUjlbBkWzPp
-AJiSLLDTPalMKCvtnyS4tfMQ+npJ55Wa9dcqOx56rlOgmO6ZCpCJw1dTWZQf//nf
-ODiv2Pnp6pk0aZeG3GZenome4LoxLvS4fij9AtmSzILyFfJOWtjq1PE097ndlf7b
-l/kNT0EoIBUpVW97D8p/VcLsinSFQZswl1Oto5kPhIMWKUO2S+upM3hIAby4YaUK
-+WKAE/hhxXLMOtxXc21HM45/o4Pr1aLz9lkjgRxAyRJSeGAZtCt4jGDEmadR383/
-MEMYo/5zSKFlgzVH0r9v3raDhs9Q/kIxkwUlt9v9LMFBtnI2/qvt479+U3NIcsvf
-wpVzFVVMUnBlsboYN2RVSpteguSho6pG3Oiu+78ept4Lb2MvTRIhM5rxc6NGFg1Z
-0Sk3dGYSQeCi3/l/r/v+owWguET+79/CC2anXbSSOLDjWX+fF1fiaXilg0UsgwY2
-2RNgx+tyAmzOUwN1BtBQS5SQ0LwnEHHm6bUkfAP0EFtS6q6acRlA+JrtydOkxOfF
-sVLDd3fF3So7M1npWaHilFM+DHnkieBezHuD+gr1Q3zPbhhCOROyrlXiyydX3rwy
-sxNesgjjWgThLjwDvp8IweLhB4xqQO+cr2DohUt7S4LI6JjHXq+/aoFb6GPs8qlx
-EzzyB9i2oRuxXrD8oJLm
-=PpPz
+iQEcBAEBCAAGBQJVQyJiAAoJECo/aRed9267QWwIAJA4VEZW2LbWImphH4jbgGHs
+FScAcJRceGbdbaTIEwFKQH5yN3dIX860QndfyNYGGmoS0LzibSutPTDGn688qDI9
+psc2bqFEe9SNx2LXtCHmNz+P6j+Ii7nBM/ik3X2It99Opnwx/W9sKRxbJPmZ1ICF
+jG2PNWJJm6NYxYdzuq58U8ZzQWHpgsZhLq0Q0dgn5hcYf5qsB9yCAle9qX+nJ87G
+jQPeH3lhkB5zWarKxgxFwaMKmaTNboe3pTlRcM7tUCCfCSBzGCq+f56KPdzpqZuA
+wSsWEXAr+xM2vSru4tAQY4emSvjkFoWN5DnQ6ONRyZhuhN9UuyXBWyGkQnXeKqg=
+=ontm
 -----END PGP SIGNATURE-----
