@@ -1,6 +1,13 @@
 # ChangeLog for net-news/canto-daemon
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/canto-daemon/ChangeLog,v 1.3 2015/04/08 18:17:12 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/canto-daemon/ChangeLog,v 1.4 2015/05/01 06:51:05 pinkbyte Exp $
+
+*canto-daemon-0.9.1 (01 May 2015)
+
+  01 May 2015; Sergey Popov <pinkbyte@gentoo.org> -canto-daemon-0.8.2.ebuild,
+  +canto-daemon-0.9.1.ebuild:
+  Version bump, wrt bug #548184. Drop old vulnerable version, wrt bug #533654.
+  Thanks to Jack Miller <jack AT codezen.org> for discovering this issue
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> canto-daemon-0.8.2.ebuild:
   Drop old Python implementations
